--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         padding-top: 500px;
         cursor: pointer;
     }
+    .idk {
+        background-color: black;
+        cursor: pointer;
+    }
     
     .cardshit {
         display: flex;
@@ -115,7 +119,7 @@
     }
     </script>
     
-  <button onclick="gotchahaha()">
+  <button class="idk" onclick="gotchahaha()">
       Click me
   </button>
 
