--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         cursor: pointer;
     }
     .idk {
-        background-color: black;
+        background-color: #FF819F;
         cursor: pointer;
+        border-color: none;
+        border-radius: 10px;
     }
     
     .cardshit {
@@ -106,6 +108,9 @@
             <p>I love you</p>
             <p>Sincerely,</p>
             <p>Your cute monkey - Yhona</p>
+              <button class="idk" onclick="gotchahaha()">
+      Click me
+  </button>
           </div>
         </div>
       </div>
@@ -119,9 +124,7 @@
     }
     </script>
     
-  <button class="idk" onclick="gotchahaha()">
-      Click me
-  </button>
+
 
   <script>
       function gotchahaha() {
