laugh edit and idk style border changed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     .idk {
         background-color: #FF819F;
         cursor: pointer;
-        border-color: none;
+        border: none;
         border-radius: 10px;
     }
     
@@ -129,7 +129,7 @@
   <script>
       function gotchahaha() {
           let currentURL = window.location.hostname;
-          alert("Click 'OK' to agree that Yhona loves you more than you love him - the war to this argument has come to an end. haha (Peter Griffin laugh)");
+          alert("Click 'OK' to agree that Yhona loves you more than you love him - the war to this argument has come to an end. MWAA HAA HAA");
       }
   </script>  
     
