--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <script>
       function gotchahaha() {
           let currentURL = window.location.hostname;
-          alert("Click 'OK' to agree that Yhona loves you more than you love him - the war to this argument has come to an end. MWAA HAA HAA");
+          alert("Click 'OK' to officially admit that Yhona loves you more than you love him. The war is over. Yhona wins. MWAHAHAA!);
       }
   </script>  
     
