--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="cards">
         <div class="card">
           <div class="letter">
-            <p>Happy Birthday!!!!</p>
+            <p>Good Morning and Happy Birthday!!!!</p>
             <p>Oh my Lily, where shall I begin? Maybe by telling you once again that you are sexy asf and that I love you :)</p>
             <p>I am obsessed with you. Literally. I honestly think, since the day I met you, a day hasn't passed without you in my thoughts.</p>
             <p>A secret for you: Every time I visit the bathroom (a lot, as you know) during school, I walk to them, eager to see if any messages or snaps of yours appear on my screen. Every day after school, I grab my phone out of my pocket or locker thinking about you... 'I'll just send her a quick text, to see how she's going...'</p>
