--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="cards">
         <div class="card">
           <div class="letter">
-            <p>"ummmm... what are you doing here?? haha caught you"</p>
+            <p>"ummmm... what are you kkkkdoing here?? haha caught you :)"</p>
               <button class="idk" onclick="gotchahaha()">
       Click me
   </button>
