update birthday message and fix links in index page; add time page

--- a/cardPage.html
+++ b/cardPage.html
@@ -101,7 +101,7 @@
             <p>Oh my Lily, where shall I begin? Maybe by telling you once again that you are sexy asf and that I love you :)</p>
             <p>I am obsessed with you. Literally. I honestly think, since the day I met you, a day hasn't passed without you in my thoughts.</p>
             <p>A secret for you: Every time I visit the bathroom (a lot, as you know) during school, I walk to them, eager to see if any messages or snaps of yours appear on my screen. Every day after school, I grab my phone out of my pocket or locker thinking about you... 'I'll just send her a quick text, to see how she's going...'</p>
-            <p>You are amazing! And pretty! And Smart! And Kind! And a monkey, duh...</p>
+            <p>You are amdddazing! And pretty! And Smart! And Kind! And a monkey, duh...</p>
             <p>I know you don't wanna make a big fuss about your birthday but I would personally like to take it as a day to celebrate you!!! If that's fine with you of course :)</p>
             <p>I'll see you later today and am totes looking forward to the arts and crafts (especially sock monkey making!!)</p>
             <p>So many amazing memories with you and am excited for many many more! Happy Birthday</p>
