--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 
 <h2>External Paths</h2>
 
-<p>This example links to a page located in the same folder as the current page:</p>
+<p>This example links to a page located asdfasdfasdfin the same folder as the current page:</p>
 
-<p><a href="cardPage.html">HTML tutorial</a></p>
+<p><a href="cardPage.html">messages pagel</a></p>
+<p><a href="time.html">time page</a></p>
 
 </body>
 </html>
