--- a/index.html
+++ b/index.html
@@ -1,15 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Us 💖</title>
+  <style>
+    body {
+      margin: 0;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fbc2eb, #a6c1ee);
+      background-size: 400% 400%;
+      animation: gradientShift 15s ease infinite;
+      font-family: 'Poppins', sans-serif;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      text-align: center;
+    }
+
+    .btn {
+      background-color: rgba(255, 255, 255, 0.15);
+      color: #ffffff;
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      padding: 20px 50px;
+      margin: 10px;
+      border-radius: 20px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(5px);
+      text-decoration: none;
+      display: inline-block;
+    }
+
+    .btn:hover {
+      background-color: rgba(255, 255, 255, 0.25);
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+      transform: scale(1.05);
+    }
+
+    .btn a {
+      color: white;
+      text-decoration: none;
+      display: block;
+    }
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
+  </style>
+</head>
 <body>
 
-<h2>External Paths</h2>
 
-<p>This example links to a page located asdfasdfasdfin the same folder as the current page:</p>
-
-<p><a href="cardPage.html">messages pagel</a></p>
-<p><a href="time.html">time page</a></p>
-
+  <div class="container">
+        <h1 style="color:white;">Lily, Welcome to Our Little Space ;)</h1>
+    <div style="font-size: 2.5rem; animation: pulse 2s infinite;">❤️</div>
+    <a href="cardPage.html" class="btn">💌 Messages</a>
+    <a href="time.html" class="btn">⏱ Timeline</a>
+    <a href="moments.html" class="btn">📸 Moments</a>
+  </div>
 </body>
 </html>
-
-
