add audio element to index page and include air.mp3 file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<audio controls autoplay>
+  <source src="air.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+
   <title>Us 💖</title>
   <style>
     body {
@@ -55,6 +60,7 @@
       color: white;
       text-decoration: none;
       display: block;
+      width: 350px;
     }
 @keyframes pulse {
   0% { transform: scale(1); }
