update moments.html to replace photo14.JPG with photo14.PNG and photo13.JPG with photo13.PNG

--- a/moments.html
+++ b/moments.html
@@ -46,8 +46,7 @@
     <img src="photo4.JPG">
     <img src="photo11.JPG">
     <img src="photo12.JPG">
-    <img src="photo13.JPG">
-    <img src="photo14.JPG">
+    <img src="photo13.PNG">
     <img src="photo17.JPG">
     <img src="photo16.JPG">
     <img src="photo18.jpeg">
@@ -66,6 +65,7 @@
     <img src="photo21.jpeg">
     <img src="photo22.jpeg">
     <img src="photo23.jpeg">
+    <img src="photo14.PNG">
   </div>
 </div>
 
