update moments.html to replace existing images and captions for improved content relevance

--- a/moments.html
+++ b/moments.html
@@ -71,133 +71,6 @@
   <div class="column">
     <div class="image-container">
       <img src="photo1.jpeg">
-      <div class="caption">School trip to the zoo</div>
-    </div>
-    <div class="image-container">
-      <img src="photo2.JPG">
-      <div class="caption">Chillin’ with the squad</div>
-    </div>
-    <div class="image-container">
-      <img src="photo3.JPG">
-      <div class="caption">Basketball finals 🏀</div>
-    </div>
-    <div class="image-container">
-      <img src="photo4.JPG">
-      <div class="caption">End of term party 🎉</div>
-    </div>
-    <div class="image-container">
-      <img src="photo11.JPG">
-      <div class="caption">Art project complete 🎨</div>
-    </div>
-    <div class="image-container">
-      <img src="photo12.JPG">
-      <div class="caption">Cafeteria chaos</div>
-    </div>
-  </div>
-
-  <div class="column">
-    <div class="image-container">
-      <img src="photo5.JPG">
-      <div class="caption">Excursion to the city</div>
-    </div>
-    <div class="image-container">
-      <img src="photo6.JPG">
-      <div class="caption">Besties forever ❤️</div>
-    </div>
-    <div class="image-container">
-      <img src="photo7.JPG">
-      <div class="caption">Sports day madness</div>
-    </div>
-    <div class="image-container">
-      <img src="photo8.JPG">
-      <div class="caption">Secret hangout spot</div>
-    </div>
-    <div class="image-container">
-      <img src="photo9.JPG">
-      <div class="caption">Caught in the act 😂</div>
-    </div>
-    <div class="image-container">
-      <img src="photo10.JPG">
-      <div class="caption">Just vibes 🎶</div>
-    </div>
-  </div>
-</div>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #111;
-      color: white;
-    }
-
-    .row {
-      display: flex;
-      flex-wrap: nowrap;
-    }
-
-    .column {
-      width: 50%;
-      padding: 4px;
-      box-sizing: border-box;
-    }
-
-    .image-container {
-      position: relative;
-      width: 100%;
-      margin-bottom: 8px;
-    }
-
-    .image-container img {
-      width: 100%;
-      display: block;
-      border-radius: 6px;
-    }
-
-    .caption {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      padding: 10px;
-      background: rgba(0, 0, 0, 0.6);
-      color: white;
-      text-align: center;
-      opacity: 0;
-      transition: opacity 0.3s ease, text-shadow 0.3s ease;
-      border-bottom-left-radius: 6px;
-      border-bottom-right-radius: 6px;
-      text-shadow: none;
-    }
-
-    .image-container:hover .caption {
-      opacity: 1;
-      text-shadow: 0 0 8px #ffffff, 0 0 16px #ffffff, 0 0 24px #00ffff;
-    }
-
-    @media (max-width: 768px) {
-      .row {
-        flex-wrap: wrap;
-      }
-
-      .column {
-        width: 100%;
-      }
-    }
-  </style>
-</head>
-<body>
-
-<div class="row"> 
-  <div class="column">
-    <div class="image-container">
-      <img src="photo1.jpeg">
       <div class="caption">Need more of those nights fs</div>
     </div>
     <div class="image-container">
@@ -233,19 +106,19 @@
     </div>
     <div class="image-container">
       <img src="photo7.JPG">
-      <div class="caption">Sports day madness</div>
+      <div class="caption">"ewwwww"</div>
     </div>
     <div class="image-container">
       <img src="photo8.JPG">
-      <div class="caption">Secret hangout spot</div>
+      <div class="caption">yummmy😋</div>
     </div>
     <div class="image-container">
       <img src="photo9.JPG">
-      <div class="caption">Caught in the act 😂</div>
+      <div class="caption">cheeky pic</div>
     </div>
     <div class="image-container">
       <img src="photo10.JPG">
-      <div class="caption">Just vibes 🎶</div>
+      <div class="caption">yk i dont like the filters</div>
     </div>
   </div>
 </div>
