update moments.html to revise captions for existing images and add new images with captions for enhanced storytelling

--- a/moments.html
+++ b/moments.html
@@ -71,11 +71,11 @@
   <div class="column">
     <div class="image-container">
       <img src="photo1.jpeg">
-      <div class="caption">Need more of those nights fs</div>
+      <div class="caption">ik and im sorry, next time ill get closer #socialdistancing</div>
     </div>
     <div class="image-container">
       <img src="photo2.JPG">
-      <div class="caption">idk</div>
+      <div class="caption">need more of these nights ong</div>
     </div>
     <div class="image-container">
       <img src="photo3.JPG">
@@ -93,6 +93,38 @@
       <img src="photo12.JPG">
       <div class="caption">Trial and Error🤦‍♂️</div>
     </div>
+    <div class="image-container">
+      <img src="photo15.JPG">
+      <div class="caption">GUDETAMAAAAA</div>
+    </div>
+    <div class="image-container">
+      <img src="photo17.JPG">
+      <div class="caption">New seat unlocked</div>
+    </div>
+      <div class="image-container">
+        <img src="photo16.JPG">
+        <div class="caption">#lily+yhonashlonktime</div>
+      </div>
+    <div class="image-container">
+        <img src="photo18.jpeg">
+        <div class="caption">#shlonktime</div>
+        </div>
+    <div class="image-container">
+        <img src="photo19.jpeg">
+        <div class="caption">Yhona: pls snap me 🙏</div>
+        </div>
+        <div class="image-container">
+        <img src="photo22.jpeg">
+        <div class="caption">hi</div>
+        </div>
+    <div class="image-container">
+        <img src="photo23.jpeg">
+        <div class="caption">best night in a long time</div>
+        </div>
+    <div class="image-container">
+        <img src="photo24.jpeg">
+        <div class="caption">hellowww</div>
+        </div>
   </div>
 
   <div class="column">
@@ -120,6 +152,24 @@
       <img src="photo10.JPG">
       <div class="caption">yk i dont like the filters</div>
     </div>
+    <div class="image-container">
+      <img src="photo13.PNG">
+      <div class="caption">"i look so sexy" - Lily</div>
+    </div>
+    <div class="image-container">
+        <img src="photo14.PNG">
+        <div class="caption">sheesh hold your horses</div>
+    </div>
+    <div class="image-container">
+        <img src="photo20.JPG">
+        <div class="caption">hey</div>
+        </div>
+    <div class="image-container">
+        <img src="photo21.jpeg">
+        <div class="caption">hmmmm yummmy😋</div>
+        </div>
+    
+
   </div>
 </div>
 
