update moments.html to rearrange image containers and captions for better organization

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ Your browser does not support the audio element.
   <div class="container">
         <h1 style="color:white;">Lily, Welcome to Our Little Space ;)</h1>
     <div style="font-size: 2.5rem; animation: pulse 2s infinite;">❤️</div>
-    <a href="cardPage.html" class="btn">💌 Messages</a>
-    <a href="time.html" class="btn">⏱ Timeline</a>
-    <a href="moments.html" class="btn">📸 Moments</a>
+    <a href="cardPage.html" target="_blank" class="btn">💌 Messages</a>
+    <a href="time.html" target="_blank" class="btn">⏱ Timeline</a>
+    <a href="moments.html" target="_blank" class="btn">📸 Moments</a>
   </div>
 </body>
 </html>
