update cardPage.html to add introductory text and instructions for card customization

--- a/cardPage.html
+++ b/cardPage.html
@@ -1,3 +1,18 @@
+
+
+collection of different cards:
+
+two diff columns: one customised for lily and one for yhona
+you can add cards
+
+e.g: lily brithday morning 14thof may 2025
+e.g: open when you are bored
+e.g: open when you want a hug
+e.g: open when you want a snap from yhona
+
+(involve supabase)
+
+
 <!DOCTYPE html>
 <html>
     <head>
