--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Your browser does not support the audio element.
         <h1 style="color:white;">Lily, Welcome to Our Little Space ;)</h1>
     <div style="font-size: 2.5rem; animation: pulse 2s infinite;">❤️</div>
     <a href="cardPage.html" target="_blank" class="btn">💌 Messages</a>
-    <a href="time.html" target="_blank" class="btn">⏱ Timeline</a>
+    <a href="time.html" target="_blank" class="btn">⏱️ Timeline</a>
     <a href="moments.html" target="_blank" class="btn">📸 Moments</a>
   </div>
 </body>
